# fonts-tweak-tool

./: .gitignore  AUTHORS  MANIFEST.in  Makefile.am  README  autogen.sh  configure.ac  font-tweaktool.py  fonts-tweak-tool  fonts-tweak-tool.desktop  fonts-tweak-tool.desktop.in  fontstools.ui  fonttools-2.glade  fonttools-2.ui  fonttweaktool  main.py  setup.py  setup.py.in
data/: Makefile.am  chooser.ui  fonts-tweak-alias.ui  fonts-tweak-lang.ui  fonts-tweak-prop.ui  fontstools.ui
fontstweak/: Makefile.am  aliasui.py  chooserui.py  fontstweak.py  langui.py  locale-list  propui.py  tool.py  util.py
fonttweak/: tool.py
po/: POTFILES.in  fonts-tweak-tool.pot
