NULL =
EXTRA_DIST =			\
	$(ui_DATA)		\
	$(localelist_DATA)	\
	$(NULL)

##
uidir = $(datadir)/fonts-tweak-tool
ui_DATA =			\
	chooser.ui		\
	fonts-tweak-alias.ui	\
	fonts-tweak-lang.ui	\
	fonts-tweak-prop.ui	\
	$(NULL)

##
localelistdir = $(datadir)/fonts-tweak-tool
localelist_DATA =	\
	locale-list	\
	$(NULL)

-include $(top_srcdir)/git.mk
